# jpyxie

./: .gitignore  README.md  pom.xml
.github/: FUNDING.yml
actuator/jpyxie-actuator-autoconfigure/: pom.xml
actuator/jpyxie-actuator-core/: pom.xml
actuator/jpyxie-actuator-spring-boot-autoconfigure/: pom.xml
actuator/jpyxie-actuator-spring-boot-core/: pom.xml
actuator/jpyxie-actuator-spring-boot-starter/: pom.xml
aop/jpyxie-spring-boot-aop-autoconfigure/: pom.xml
aop/jpyxie-spring-boot-aop-core/: pom.xml
aop/jpyxie-spring-boot-aop-starter/: pom.xml
aop/python-executor-spring-boot-aop-autoconfigure/: pom.xml
aop/python-executor-spring-boot-aop-core/: pom.xml
aop/python-executor-spring-boot-aop-starter/: pom.xml
aop/spring-boot-python-executor-aop-autoconfigure/: pom.xml
aop/spring-boot-python-executor-aop-core/: pom.xml
aop/spring-boot-python-executor-aop-starter/: pom.xml
bind/jpyxie-bind/: pom.xml
bind/jpyxie-bind-core/: pom.xml
bind/jpyxie-bind-spring-boot-autoconfigure/: pom.xml
bind/jpyxie-bind-spring-boot-starter/: pom.xml
bind/python-executor-bind-core/: pom.xml
bom/jpyxie-bom/: pom.xml
cache/python-executor-spring-boot-cache-autoconfigure/: pom.xml
cache/python-executor-spring-boot-cache-core/: pom.xml
cache/python-executor-spring-boot-cache-starter/: pom.xml
cache/spring-boot-python-executor-cache-autoconfigure/: pom.xml
cache/spring-boot-python-executor-cache-starter/: pom.xml
common/jpyxie-common/: pom.xml
executor/rest/python-rest-server/: main.py  pyproject.toml
grpc/jpyxie-grpc-server/: Dockerfile  main.py  pyproject.toml  python.proto  python_pb2.py  python_pb2.pyi  python_pb2_grpc.py
spring-boot-python-executor-core/: pom.xml
(+1245 files in other folders)
