[project]
name = "jpyxie-grpc-server"
version = "2.0.0"
description = "The gRPC server for executing Python code"
authors = [
    { name = "Maksym Uimanov", email = "uimanovmaks@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["python", "grpc", "grpcio", "server", "java"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: grpcio",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf"
]
[project.urls]
Homepage = "https://github.com/maksymuimanov/jpyxie"
Repository = "https://github.com/maksymuimanov/jpyxie.git"
Documentation = "https://github.com/maksymuimanov/jpyxie"
BugTracker = "https://github.com/maksymuimanov/jpyxie/issues"